<resources>
    <string name="app_name">Restaurant Application</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_personel">Sign Up (Personel)</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="insert_password">Insert Password</string>
    <string name="insert_username">insert_username</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="order_history">Order History</string>
    <string name="plus">plus</string>
    <string name="current_order">Current Order</string>
    <string name="logout">logout</string>
    <string name="Name">Name</string>
    <string name="Surname">Surname\n</string>
    <string name="cvv">CVV</string>
    <string name="create_account">Create Account</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="gradient_field">gradient field</string>
    <string name="sign_up_owner">Sign Up (Owner)\n</string>
    <string name="iban">Iban</string>
    <string name="tin">Tin</string>
    <string name="Homepage">Homepage</string>
    <string name="placeorder">PlaceOrder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chef">Chef</string>
    <string name="cancelorder">CancelOrder</string>
    <string name="RestaurantName">RestaurantName</string>
    <string name="create_restaurant">Create Restaurant</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="Resttelephone">Telephone</string>
    <string name="street_number">Street Number</string>
    <string name="street_name">Street Name</string>
    <string name="street_number1">Street Number</string>
    <string name="street_name1">Street Name</string>
    <string name="zc">ZC</string>
    <string name="city">City</string>
    <string name="total_tables">Total Tables</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="yearly_income">Yearly Income</string>
    <string name="average_expenses_for_each_customer">Average expenses for each customer</string>
    <string name="verage_daily_revenue">Αverage daily revenue</string>
    <string name="order_cancellation_rate">Order cancellation rate</string>
    <string name="TopUp">Top up\n</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="emptyView">There are no restaurants for this owner yet. Try adding one first by clicking the button below!</string>
    <string name="restaurant_name1">Restaurant Name\n</string>
    <string name="restaurant_id">Restaurant Id\n</string>
    <string name="restaurant_tables">Restaurant Tables</string>
    <string name="restaurant_address_street">Restaurant Address Street\n</string>
    <string name="restaurant_address_number">Restaurant Adress Number</string>
    <string name="restaurant_zc">Restaurant Zipcode</string>
    <string name="restaurant_city">Restaurant City</string>
    <string name="statistics">Statistics\n</string>
    <string name="dishname">Dish Name</string>
    <string name="dishprice">Dish Price</string>
    <string name="place_order">Place Order</string>
    <string name="dd_chef">Αdd Chef</string>
    <string name="confirm">Confirm</string>
    <string name="go_back">Go Back</string>
    <string name="go_back1">Go Back</string>
    <string name="there_are_not_any_orders_for_this_chef_to_complete_please_wait_until_a_customer_makes_one">There are not any orders for this chef to complete. Please wait until a customer makes one!</string>
    <string name="go_back3">Go Back</string>
    <string name="no_restaurants_found">No restaurants found : (</string>
    <string name="go_back4">Go Back</string>
    <string name="order_id">Order Id</string>
    <string name="order_state">Order State</string>
    <string name="date">Date</string>
    <string name="table_number">Table Number</string>
    <string name="set_completed">Set Completed</string>
    <string name="go_back5">Go back</string>
    <string name="add_restaurant1">Add Restaurant</string>
    <string name="go_back6">Go Back</string>
    <string name="place_order2">Place Order</string>
    <string name="no_dishes_are_available4">No dishes are available :(</string>
    <string name="cartbutton">cartButton</string>
    <string name="statistics4">Statistics</string>
    <string name="go_back7">Go back</string>
    <string name="go_back8">Go Back</string>
    <string name="card_number9">Card Number</string>
    <string name="average_monthly_income">Average Monthly Income</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="average_expenses_for_each_order">Average Expenses for each order</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="go_back9">Go back</string>
    <string name="_50">50€</string>
    <string name="_20">20€</string>
    <string name="_10">10€</string>
    <string name="balance">Balance</string>
    <string name="add">Add</string>
    <string name="x_quot_quot">Δεν υπάρxει ενεργή παραγγελία αυτή την στιγμή, πιεστε το \"+\" για να ανεβάσετε μία καινούρια</string>
    <string name="textview9">TextView</string>
    <string name="textview7">textView</string>
    <string name="orderstate">orderState</string>
    <string name="dish_name">Dish Name</string>
    <string name="dish_quant">Dish Quant</string>
    <string name="dish_name2">Dish Name</string>
    <string name="dish_quant5">Dish Quant</string>
    <string name="deleteorderlinebutton">deleteOrderLineButton</string>
    <string name="add2">Add</string>
</resources>